crates/ruff_python_parser/tests/snapshots/invalid_syntax@del_debug_py39.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..57,
        body: [
            Delete(
                StmtDelete {
                    node_index: NodeIndex(None),
                    range: 43..56,
                    targets: [
                        Name(
                            ExprName {
                                node_index: NodeIndex(None),
                                range: 47..56,
                                id: Name("__debug__"),
                                ctx: Del,
                            },
                        ),
                    ],
                    runtime_targets: None,
                },
            ),
        ],
        runtime_body: None,
    },
)
```
## Semantic Syntax Errors

  |
1 | # parse_options: {"target-version": "3.9"}
2 | del __debug__
  |     ^^^^^^^^^ Syntax Error: cannot delete `__debug__` on Python 3.9 (syntax was removed in 3.9)
  |
