crates/ruff_python_parser/tests/snapshots/invalid_syntax@del_stmt_empty.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/del_stmt_empty.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..4,
        body: [
            Delete(
                StmtDelete {
                    node_index: NodeIndex(None),
                    range: 0..3,
                    targets: [],
                    runtime_targets: None,
                },
            ),
        ],
        runtime_body: None,
    },
)
```
## Errors

  |
1 | del
  |    ^ Syntax Error: delete statement must have at least one target
