crates/ruff_python_parser/tests/snapshots/invalid_syntax@except_stmt_missing_as_name.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/except_stmt_missing_as_name.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..73,
        body: [
            Try(
                StmtTry {
                    node_index: NodeIndex(None),
                    range: 0..72,
                    body: [
                        Pass(
                            StmtPass {
                                node_index: NodeIndex(None),
                                range: 9..13,
                            },
                        ),
                    ],
                    handlers: [
                        ExceptHandler(
                            ExceptHandlerExceptHandler {
                                range: 14..43,
                                node_index: NodeIndex(None),
                                type_: Some(
                                    Name(
                                        ExprName {
                                            node_index: NodeIndex(None),
                                            range: 21..30,
                                            id: Name("Exception"),
                                            ctx: Load,
                                        },
                                    ),
                                ),
                                name: None,
                                body: [
                                    Pass(
                                        StmtPass {
                                            node_index: NodeIndex(None),
                                            range: 39..43,
                                        },
                                    ),
                                ],
                                runtime_body: None,
                            },
                        ),
                        ExceptHandler(
                            ExceptHandlerExceptHandler {
                                range: 44..72,
                                node_index: NodeIndex(None),
                                type_: Some(
                                    Name(
                                        ExprName {
                                            node_index: NodeIndex(None),
                                            range: 51..60,
                                            id: Name("Exception"),
                                            ctx: Load,
                                        },
                                    ),
                                ),
                                name: None,
                                body: [
                                    Pass(
                                        StmtPass {
                                            node_index: NodeIndex(None),
                                            range: 68..72,
                                        },
                                    ),
                                ],
                                runtime_body: None,
                            },
                        ),
                    ],
                    orelse: [],
                    finalbody: [],
                    is_star: false,
                    runtime_body: None,
                    runtime_handlers: None,
                    runtime_orelse: None,
                    runtime_finalbody: None,
                },
            ),
        ],
        runtime_body: None,
    },
)
```
## Errors

  |
1 | try:
2 |     pass
3 | except Exception as:
  |                    ^ Syntax Error: expected name after `as`
4 |     pass
5 | except Exception as
  |


  |
3 | except Exception as:
4 |     pass
5 | except Exception as
  |                    ^ Syntax Error: expected name after `as`
6 |     pass
  |
